# YouTube-Clickbait-CLI

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
creating_test_files/: stats1.csv  stats10.csv  stats100.csv  stats11.csv  stats12.csv  stats13.csv  stats14.csv  stats15.csv  stats16.csv  stats17.csv  stats18.csv  stats19.csv  stats2.csv  stats20.csv  stats21.csv  stats22.csv  stats23.csv  stats24.csv  stats25.csv  stats26.csv  stats27.csv  stats28.csv  stats29.csv  stats3.csv  stats30.csv  stats31.csv  stats32.csv  stats33.csv  stats34.csv  stats35.csv  stats36.csv  stats37.csv  stats38.csv  stats39.csv  stats4.csv  stats40.csv  stats41.csv  stats42.csv  stats43.csv  stats44.csv  (+61 more)
tests/: test_cli.py  test_reports.py
youtube_clickbait/: __init__.py  cli.py  csv_reader.py  models.py  reports.py
youtube_clickbait_cli.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
