[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-clickbait-cli"
version = "1.0.0"
description = "CLI tool for YouTube clickbait CSV reports"
requires-python = ">=3.10"
dependencies = [
    "tabulate>=0.9"
]

[tool.setuptools.packages.find]
include = ["youtube_clickbait*"]